--- a/views/login.ejs
+++ b/views/login.ejs
@@ -120,7 +120,7 @@
     <div class="shape"></div>
     <div class="shape"></div>
   </div>
-  <form action="/api/auth" method="POST">
+  <form action="/login" method="POST">
     <h3>Login</h3>
     <div>
       <label for="email">Email</label>
