--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,9 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <title>Document</title>
+  <title>Profile</title>
 </head>
 <body>
+  <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
   <h1>Hi </h1>
   <form action="/api/auth" method="DELETE">
     <button type="submit">Log Out</button>
@@ -15,7 +16,7 @@
 
   <div class="container">
     <h1>URL Shrinker</h1>
-    <form action="/shortUrls" method="POST" class="my-4 form-inline">
+    <form action="/api/urls" method="POST" target="dummyframe" class="my-4 form-inline">
       <label for="fullUrl" class="sr-only">Url</label>
       <input required placeholder="Url" type="url" name="fullUrl" id="fullUrl" class="form-control col mr-2">
       <button class="btn btn-success" type="submit">Shrink</button>
