--- a/views/register.ejs
+++ b/views/register.ejs
@@ -122,7 +122,7 @@
     <div class="shape"></div>
     <div class="shape"></div>
   </div>
-  <form action="/api/users" method="POST">
+  <form action="/register" method="POST">
     <h3>Register</h3>
     <div>
       <label for="name">Name</label>
