--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -9,22 +9,115 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 
-<style media="screen">
-
-
+  <style media="screen">
+    *,
+    *:before,
+    *:after{
+      padding: 0;
+      margin: 0;
+      box-sizing: border-box;
+    }
+    body{
+      background-color: #080710;
+    }
+    .background{
+      width: 430px;
+      height: 520px;
+      position: absolute;
+      transform: translate(-50%,-50%);
+      left: 50%;
+      top: 50%;
+    }
+    .background .shape{
+      height: 200px;
+      width: 200px;
+      position: absolute;
+      border-radius: 50%;
+    }
+    .shape:first-child{
+      background: linear-gradient(
+          #1845ad,
+          #23a2f6
+      );
+      left: -80px;
+      top: -80px;
+    }
+    .shape:last-child{
+      background: linear-gradient(
+          to right,
+          #ff512f,
+          #f09819
+      );
+      right: -30px;
+      bottom: -80px;
+    }
+    .container{
+      height: auto;
+      width: auto;
+      background-color: rgba(255,255,255,0.13);
+      position: absolute;
+      transform: translate(-50%,-50%);
+      top: 50%;
+      left: 50%;
+      border-radius: 10px;
+      backdrop-filter: blur(10px);
+      border: 2px solid rgba(255,255,255,0.1);
+      box-shadow: 0 0 40px rgba(8,7,16,0.6);
+      padding: 50px 35px;
+    }
+    .container *{
+      font-family: 'Poppins',sans-serif;
+      letter-spacing: 0.5px;
+      outline: none;
+      border: none;
+    }
+    .container h3{
+      font-size: 32px;
+      font-weight: 500;
+      line-height: 42px;
+      text-align: center;
+      color: #ffffff;
+    }
+    .container table{
+      color: #ffffff;
+      width: auto;
+      background-color: rgba(255,255,255,0.13);
+    }
+    .container table th{
+      text-align: center;
+    }
+    .container table td{
+      text-align: center;
+      vertical-align: middle;
+      border: 1px solid #333337;
+      width: auto;
+      color: #080710;
+      background-color: #ffffff;
+    }
+    .container a{
+      float: inherit;
+    }
+    a{
+      color: #080710;
+      float: right;
+    }
 </style>
 </head>
 <body>
-  <!-- <div class="background">
+  <div class="background">
     <div class="shape"></div>
     <div class="shape"></div>
-  </div> -->
-  <form action="/api/auth" method="DELETE">
-  </form>
-
-  <div>
-    <h1>URL Shrinker</h1>
+  </div>
+  <a href="http://localhost:3000/logout">
+    <button type="button" style="height: 50px;" class="btn btn-default btn-sm">
+      <span class="glyphicon glyphicon-log-out"></span> Log out
+    </button>
+  </a>
+  <div class="container">
+    <h3>My Links</h3>
     <form action="/profile" method="POST" class="my-4 form-inline">
       <label for="fullUrl" class="sr-only">Url</label>
       <input required placeholder="Url" type="url" name="full" id="fullUrl" class="form-control col mr-2">
@@ -37,7 +130,7 @@
           <th>Full URL</th>
           <th>Short URL</th>
           <th>Clicks</th>
-          <th></th>
+          <th>Delete</th>
         </tr>
       </thead>
       <tbody>
@@ -46,7 +139,13 @@
             <td><a href="<%= url.full %>"><%= url.full %></a></td>
             <td><a href="http://localhost:3000/mylink/<%= url.short %>">http://localhost:3000/mylink/<%= url.short %></a></td>
             <td><%= countMap[url.short] %></td>
-            <td><a href="http://localhost:3000/profile/delete/<%= url.short %>"><button>Delete</button></a></td>
+            <td>
+              <a href="http://localhost:3000/profile/delete/<%= url.short %>">
+                <button type="button" class="btn btn-link">
+                  <span class="bi bi-trash"></span>
+                </button>
+              </a>
+            </td>
           </tr>
         <% }) %>
       </tbody>
